lean-ray-server/quickcheck/Test/DeriveArbitrary/DeriveNKIValueGenerator.lean
import Quickcheck.Arbitrary
import Quickcheck.DeriveArbitrary
import Quickcheck.Attr
import Quickcheck.Testable

open Quickcheck Gen

set_option guard_msgs.diff true

/-- A datatype representing values in the NKI language, adapted from
    https://github.com/leanprover/KLR/blob/main/KLR/NKI/Basic.lean -/
inductive Value where
  | none
  | bool (value : Bool)
  | int (value : Int)
  | string (value : String)
  | ellipsis
  | tensor (shape : List Nat) (dtype : String)
  deriving Repr

set_option trace.quickcheck.deriving.arbitrary true in
/--
trace: [quickcheck.deriving.arbitrary] ‚Źé
    [mutual
       def arbitraryValue‚úĚ : Nat ‚Üí Quickcheck.Gen (@Value‚úĚ) :=
         let rec aux_arb (fuel‚úĚ : Nat) : Quickcheck.Gen (@Value‚úĚ) :=
           match fuel‚úĚ with
           | Nat.zero =>
             Quickcheck.Gen.oneOfWithDefault (pure Value.none)
               [(pure Value.none),
                 (do
                   let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return Value.bool a‚úĚ),
                 (do
                   let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return Value.int a‚úĚ¬Ļ),
                 (do
                   let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return Value.string a‚úĚ¬≤),
                 (pure Value.ellipsis),
                 (do
                   let a‚úĚ¬≥ ‚Üź Quickcheck.Arbitrary.arbitrary
                   let a‚úĚ‚Āī ‚Üź Quickcheck.Arbitrary.arbitrary
                   return Value.tensor a‚úĚ¬≥ a‚úĚ‚Āī)]
           | fuel'‚úĚ + 1 =>
             Quickcheck.Gen.frequency (pure Value.none)
               [(1, (pure Value.none)),
                 (1,
                   (do
                     let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return Value.bool a‚úĚ)),
                 (1,
                   (do
                     let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return Value.int a‚úĚ¬Ļ)),
                 (1,
                   (do
                     let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return Value.string a‚úĚ¬≤)),
                 (1, (pure Value.ellipsis)),
                 (1,
                   (do
                     let a‚úĚ¬≥ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ‚Āī ‚Üź Quickcheck.Arbitrary.arbitrary
                     return Value.tensor a‚úĚ¬≥ a‚úĚ‚Āī)),
                 ]
         fun fuel‚úĚ => aux_arb fuel‚úĚ
     end,
     instance : Quickcheck.ArbitraryFueled‚úĚ (@Value‚úĚ) :=
       ‚ü®arbitraryValue‚úĚ‚ü©]
-/
#guard_msgs in
deriving instance Arbitrary for Value

-- Test that we can successfully synthesize instances of `Arbitrary` & `ArbitraryFueled`

/-- info: instArbitraryFueledValue -/
#guard_msgs in
#synth ArbitraryFueled Value

/-- info: instArbitraryOfArbitraryFueled -/
#guard_msgs in
#synth Arbitrary Value

/-- `Shrinkable` instance for `Value`s which recursively
    shrinks each argument to a constructor -/
instance : Shrinkable Value where
  shrink (v : Value) :=
    match v with
    | .none | .ellipsis => []
    | .bool b => .bool <$> Shrinkable.shrink b
    | .int n => .int <$> Shrinkable.shrink n
    | .string s => .string <$> Shrinkable.shrink s
    | .tensor shape dtype =>
      let shrunkenShapes := Shrinkable.shrink shape
      let shrunkenDtypes := Shrinkable.shrink dtype
      (Function.uncurry .tensor) <$> List.zip shrunkenShapes shrunkenDtypes

/-- `SampleableExt` instance for `Value` -/
instance : SampleableExt Value :=
  SampleableExt.mkSelfContained Arbitrary.arbitrary

-- To test whether the derived generator can generate counterexamples,
-- we state an (erroneous) property that states that all `Value`s are `Bool`s
-- and see if the generator can refute this property.

/-- Determines whether a `Value` is a `Bool` -/
def isBool (v : Value) : Bool :=
  match v with
  | .bool _ => true
  | _ => false

/-- error: Found a counter-example! -/
#guard_msgs in
#eval Testable.check (‚ąÄ v : Value, isBool v)
  (cfg := {numInst := 10, maxSize := 5, quiet := true})
